--- a/index.html
+++ b/index.html
@@ -168,12 +168,13 @@
   </a>
 </div>
 
-      <div class="card">
-        <div class="kicker">Programs</div>
-        <h3>โปรแกรม Self-Healing และการเรียนรู้แบบมีผู้ชี้ทาง</h3>
-        <p>เส้นทางเยียวยาอย่างเป็นระบบ ผ่านสติ ลมหายใจ และความเข้าใจตนเอง</p>
-      </div>
-
+     <a class="card" href="service-programs.html">
+  <div class="kicker">3) Programs</div>
+  <h3>โปรแกรม Self-Healing (คอร์ส / เวิร์กช็อป)</h3>
+  <p>
+    เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง ลมหายใจ และการฝึกที่ “ทำได้จริงในชีวิตประจำวัน”
+  </p>
+</a>
       <div class="card">
         <div class="kicker">Practices</div>
         <h3>การฝึกความนิ่งและลมหายใจอย่างลึกซึ้ง</h3>
