--- a/services.html
+++ b/services.html
@@ -140,13 +140,37 @@
   </p>
 </a>
 
-      <a class="card" href="service-programs.html">
-  <div class="kicker">3) Programs</div>
-  <h3>โปรแกรม Self-Healing (คอร์ส / เวิร์กช็อป)</h3>
-  <p>
-    เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง ลมหายใจ และการฝึกที่ “ทำได้จริงในชีวิตประจำวัน”
-  </p>
-</a>
+ </div> <!-- ปิด grid2 -->
+
+<!-- ===== Programs : Step 1 ===== -->
+<section class="panel hero" style="margin-top:16px;">
+  <div class="heroGrid">
+
+    <div class="heroText">
+      <div class="goldline">Programs • โปรแกรมหลักของ KRUNIKI</div>
+      <h1>KRUNIKI SoulSync System™</h1>
+      <p class="lead">
+        เส้นทางหลักของการเรียนรู้และการเยียวยาภายใน
+        ที่ออกแบบมาเพื่อพาผู้เรียนกลับมาหลอมรวมชีวิต
+        จากศูนย์กลางภายใน อย่างเป็นระบบและเป็นลำดับ
+      </p>
+    </div>
+
+    <div class="quoteCard">
+      <div class="quoteTop">
+        <div class="leftTitle">Core Direction</div>
+        <div>Programs</div>
+      </div>
+      <p class="quote">
+        โปรแกรมนี้ไม่ใช่คอร์สสั้น
+        และไม่ใช่การเรียนรู้แบบแยกส่วน
+        แต่เป็นเส้นทางการเรียนรู้และการปฏิบัติ
+        ที่ค่อย ๆ พาผู้เรียนกลับมาจัดวางชีวิตจากภายใน
+      </p>
+    </div>
+
+  </div>
+</section>
 
       <div class="card">
         <div class="kicker">4) Tools & Practices</div>
