--- a/services.html
+++ b/services.html
@@ -119,28 +119,7 @@
     </div>
 
     <div class="grid2">
-      <a class="card cardLink" href="service-20min.html"
-   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
-  <div class="kicker">1) 20-Minute Session</div>
-  <h3>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</h3>
-  <p>
-    พื้นที่รับฟังใจแบบปลอดภัย เหมาะสำหรับ “อยากเบาลงทันที”
-    และกลับสู่ baseline ของระบบประสาท
-  </p>
- </a>
- 
-
-      <a class="card cardLink" href="service-private.html"
-   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว">
-  <div class="kicker">2) Private Guidance</div>
-  <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
-  <p>
-    สำหรับคนที่อยากจัดระบบชีวิต-หัวใจแบบจริงจัง เป็นขั้น เป็นลำดับ
-    และมีผู้ชี้ทางที่เข้าใจ
-  </p>
-</a>
-
- </div> <!-- ปิด grid2 -->
+</div> <!-- ปิด grid2 -->
 
 <!-- ===== Programs : Step 1 ===== -->
 <section class="panel hero" style="margin-top:16px;">
@@ -168,7 +147,36 @@
         ที่ค่อย ๆ พาผู้เรียนกลับมาจัดวางชีวิตจากภายใน
       </p>
     </div>
+    
+      <a class="card cardLink" href="service-20min.html"
+   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
+  <div class="kicker">1) 20-Minute Session</div>
+  <h3>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</h3>
+  <p>
+    พื้นที่รับฟังใจแบบปลอดภัย เหมาะสำหรับ “อยากเบาลงทันที”
+    และกลับสู่ baseline ของระบบประสาท
+  </p>
+ </a>
+ 
 
+      <a class="card cardLink" href="service-private.html"
+   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว">
+  <div class="kicker">2) Private Guidance</div>
+  <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
+  <p>
+    สำหรับคนที่อยากจัดระบบชีวิต-หัวใจแบบจริงจัง เป็นขั้น เป็นลำดับ
+    และมีผู้ชี้ทางที่เข้าใจ
+  </p>
+</a>
+
+      <a class="card" href="service-programs.html">
+  <div class="kicker">3) Programs</div>
+  <h3>โปรแกรม Self-Healing (คอร์ส / เวิร์กช็อป)</h3>
+  <p>
+    เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง ลมหายใจ และการฝึกที่ “ทำได้จริงในชีวิตประจำวัน”
+  </p>
+</a>
+    
   </div>
 </section>
 
