--- a/services.html
+++ b/services.html
@@ -119,7 +119,8 @@
     </div>
 
     <div class="grid2">
-</div> <!-- ปิด grid2 -->
+      </div>
+    </div> <!-- ปิด grid2 -->
 
 <!-- ===== Programs : Step 1 ===== -->
 <section class="panel hero" style="margin-top:16px;">
@@ -147,8 +148,11 @@
         ที่ค่อย ๆ พาผู้เรียนกลับมาจัดวางชีวิตจากภายใน
       </p>
     </div>
+
+  </div>
+</section>
     
-      <a class="card cardLink" href="service-20min.html"
+     <a class="card cardLink" href="service-20min.html"
    aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
   <div class="kicker">1) 20-Minute Session</div>
   <h3>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</h3>
@@ -158,8 +162,7 @@
   </p>
  </a>
  
-
-      <a class="card cardLink" href="service-private.html"
+  <a class="card cardLink" href="service-private.html"
    aria-label="เปิดรายละเอียดบริการ: KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว">
   <div class="kicker">2) Private Guidance</div>
   <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
