--- a/services.html
+++ b/services.html
@@ -85,7 +85,7 @@
     <div class="heroGrid">
       <div class="heroText">
         <div class="goldline">Services • บริการของ <strong>KRUNIKI</strong></div>
-        <h1>พื้นที่บริการที่อ่อนโยน แต่ชัดเจน</h1>
+        <h1>พื้นที่บริการอ่อนโยน แต่ชัดเจน</h1>
         <p class="lead">
           หน้านี้คือ “ภาพรวมบริการ” ของ KRUNIKI — สำหรับคนที่อยากเริ่มต้นแบบไม่รีบ
           เลือกสิ่งที่เหมาะกับหัวใจในตอนนี้ และค่อย ๆ กลับมาอยู่กับตัวเองอย่างเป็นระบบ
@@ -107,15 +107,6 @@
           กลับมาฟังหัวใจแบบไม่ตัดสิน และค่อย ๆ ทำให้ชีวิตเบาขึ้นทีละขั้น
         </p>
       </div>
-    </div>
-
-    <!-- เนื้อหา Services -->
-    <div class="subPanel" style="margin-top:16px;">
-      <h2>ภาพรวมบริการ (Overview)</h2>
-      <p class="small">
-        * โครงสร้างหน้านี้ “ล็อคสไตล์เหมือน HOME” เพื่อให้ทุกหน้าไปในทิศทางเดียวกัน  
-        เดี๋ยวหน้าถัดไปเราจะทำ: Resources / Contact ให้สอดคล้องกันทั้งหมด
-      </p>
     </div>
 
     <div class="grid2">
@@ -149,6 +140,14 @@
       </p>
     </div>
 
+     <!-- เนื้อหา Services -->
+    <div class="subPanel" style="margin-top:16px;">
+      <h2>ภาพรวมบริการ (Overview)</h2>
+      <p class="small">
+        * โครงสร้างหน้านี้ “ล็อคสไตล์เหมือน HOME” เพื่อให้ทุกหน้าไปในทิศทางเดียวกัน  
+        เดี๋ยวหน้าถัดไปเราจะทำ: Resources / Contact ให้สอดคล้องกันทั้งหมด
+      </p>
+    </div>
   </div>
 </section>
     
