--- a/services.html
+++ b/services.html
@@ -142,6 +142,103 @@
 
   </div>
 </section>
+
+<!-- =========================
+  Programs — Step 2 (Safe Details)
+  Focus: SoulSync System™ / Certification Program 8–12 months
+========================= -->
+<section class="panel" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>Step 2 — Programs (ภาพรวมโปรแกรมหลัก)</h2>
+    <div class="resTag">SoulSync System™ • 8–12 Months • Structured</div>
+  </div>
+
+  <div class="resBody">
+    <!-- Signature line -->
+    <div class="resBox" style="margin-bottom:12px;">
+      <div class="kicker">Signature</div>
+      <p style="margin:8px 0 0; color:rgba(255,255,255,.86); line-height:1.85;">
+        <strong>นี่ไม่ใช่คอร์สที่ให้ “ข้อมูลเพิ่ม”</strong> — แต่คือโปรแกรมที่จัดวางชีวิตจากศูนย์กลางภายใน
+        <strong>แบบเป็นลำดับ</strong> จน “ทำได้จริง” และ “อยู่ได้จริง” ในชีวิตประจำวัน
+      </p>
+    </div>
+
+    <!-- Use user's Signature (locked) -->
+    <div class="resBox" style="margin-bottom:12px;">
+      <div class="kicker">About the Program</div>
+      <p style="margin:8px 0 0; line-height:1.9;">
+        KRUNIKI SoulSync System™ แนวทางการเรียนรู้และเยียวยาภายในด้วยสติ
+        เพื่อการหลอมรวมพลังจิต วิญญาณ และหัวใจ<br>
+        พัฒนาโดย “ครูนิกี้” ผู้สร้างแนวทาง KRUNIKI SoulSync System™
+        และ KRUNIKI Healing System™ Certificate Program (8–12 เดือน)<br>
+        เส้นทางฟื้นคืนพลังรักแท้จากภายใน ผ่านการปลุกหัวใจ สมาธิ พลังงาน และจิตสำนึกใหม่
+      </p>
+    </div>
+
+    <div class="grid2">
+      <!-- Who it's for -->
+      <div class="card">
+        <div class="kicker">เหมาะกับใคร</div>
+        <h3>เหมาะกับคนที่ต้องการ “เส้นทางจริง”</h3>
+        <p>
+          เหมาะสำหรับผู้ที่ต้องการโปรแกรมที่ <strong>ชัดเจน ยืนพื้น และเป็นลำดับ</strong><br>
+          เพื่อกลับมารับรู้ศูนย์กลางภายใน และจัดวางชีวิตให้มั่นคงขึ้นจากด้านใน
+        </p>
+      </div>
+
+      <!-- Not for -->
+      <div class="card">
+        <div class="kicker">อาจไม่เหมาะกับใคร</div>
+        <h3>ถ้าคุณต้องการ “คำตอบเร็ว” แบบไม่ฝึก</h3>
+        <p>
+          โปรแกรมนี้ออกแบบเป็น <strong>Learning & Practice</strong><br>
+          หากกำลังมองหาสูตรลัด หรืออยากได้ผลโดยไม่ลงมือปฏิบัติอย่างสม่ำเสมอ
+          อาจยังไม่ใช่จังหวะที่เหมาะที่สุด
+        </p>
+      </div>
+
+      <!-- Structure (safe) -->
+      <div class="card">
+        <div class="kicker">โครงสร้าง (ปลอดภัย)</div>
+        <h3>8 Sessions • 8–12 เดือน (เป็นลำดับ)</h3>
+        <p>
+          โครงสร้างเป็นเส้นทางระยะยาว แบ่งเป็นบทเรียน/เซสชันตามลำดับ<br>
+          มีกรอบการเรียนรู้ + การปฏิบัติ + การบูรณาการสู่ชีวิตจริง<br>
+          (รายละเอียดเชิงลึกจะแจ้งเฉพาะผู้ที่นัดหมาย/สมัครเข้าร่วม)
+        </p>
+      </div>
+
+      <!-- What you get -->
+      <div class="card">
+        <div class="kicker">สิ่งที่ผู้เรียนได้กลับไป</div>
+        <h3>ความชัด • ความนิ่ง • ความต่อเนื่อง</h3>
+        <p>
+          ผู้เรียนจะได้ “ระบบ” ที่ใช้งานซ้ำได้ในชีวิตจริง<br>
+          เพื่อกลับมารับรู้ตัวเอง ปรับสมดุล และรักษาความต่อเนื่องของการฝึก<br>
+          โดยใช้ <strong>สติ • ความนิ่ง • ลมหายใจ</strong> เป็นแกนหลัก
+        </p>
+      </div>
+    </div>
+
+    <div class="subPanel" style="margin-top:14px;">
+      <h2 style="margin:0 0 10px;">สิ่งที่เราจะเปิดเผยบนเว็บไซต์ (พอดีและปลอดภัย)</h2>
+      <ul class="list" style="margin:0; padding-left:18px;">
+        <li>ภาพรวมทิศทางของโปรแกรม + ระยะเวลา + โครงสร้างแบบกว้าง</li>
+        <li>คุณค่าที่ผู้เรียนจะได้รับ (ผลลัพธ์เชิงประสบการณ์/การใช้ชีวิต)</li>
+        <li>วิธีนัดหมาย/การคัดเลือกความพร้อมเบื้องต้นก่อนเข้าร่วม</li>
+      </ul>
+      <p class="small" style="margin-top:10px;">
+        * รายละเอียดเชิงลึกของกระบวนการภายในจะถูกสื่อสารในขั้นตอนนัดหมาย เพื่อปกป้องมาตรฐานของระบบ
+        และรักษาความปลอดภัยของผู้เรียน
+      </p>
+
+      <div class="ctaRow" style="margin-top:12px;">
+        <a class="btn primary" href="index.html#contact">นัดหมายเพื่อรับข้อมูลโปรแกรม</a>
+        <a class="btn" href="services.html">กลับหน้า Services</a>
+      </div>
+    </div>
+  </div>
+</section>
     
      <a class="card cardLink" href="service-20min.html"
    aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
