--- a/services.html
+++ b/services.html
@@ -239,7 +239,139 @@
     </div>
   </div>
 </section>
-    
+
+<!-- =========================
+  Programs — Step 3 (Safe 8 Sessions Overview)
+  Goal: ให้เห็นภาพ “เส้นทาง 8–12 เดือน” แบบชัด แต่ไม่เปิดสูตร
+========================= -->
+<section class="panel" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>Step 3 — โครงสร้างโปรแกรม (8 Sessions)</h2>
+    <div class="resTag">8–12 Months • Structured • SoulSync System™</div>
+  </div>
+
+  <div class="resBody">
+    <div class="resBox" style="margin-bottom:12px;">
+      <div class="kicker">ภาพรวมแบบปลอดภัย</div>
+      <p style="margin:8px 0 0; line-height:1.9;">
+        KRUNIKI Healing System™ Certificate Program เป็นเส้นทางหลักภายใต้
+        <strong>KRUNIKI SoulSync System™</strong><br>
+        โครงสร้างทั้งหมดถูกออกแบบให้ “ค่อย ๆ ลึกขึ้นอย่างเป็นลำดับ”
+        เพื่อให้ผู้เรียนสามารถนำกลับไปใช้ในชีวิตจริงได้อย่างมั่นคง
+        โดยไม่เร่ง ไม่ฝืน และไม่ข้ามขั้น
+      </p>
+    </div>
+
+    <!-- 3 Phases -->
+    <div class="grid2">
+      <div class="card">
+        <div class="kicker">Phase I</div>
+        <h3>Re-Treat — การคืนพลังหัวใจ</h3>
+        <p>
+          วางฐานให้หัวใจกลับมารับรู้ได้อีกครั้ง<br>
+          เริ่มต้นจากความปลอดภัย ความชัด และความอ่อนโยนที่ทำได้จริง
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="kicker">Phase II</div>
+        <h3>Re-Set — การปรับจิตและเยียวยาแก่นใน</h3>
+        <p>
+          จัดระบบการเรียนรู้และการปฏิบัติให้ต่อเนื่องขึ้น<br>
+          เน้นการกลับมารับรู้ ปรับสมดุล และบูรณาการสู่ชีวิตประจำวัน
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="kicker">Phase III</div>
+        <h3>Re-Birth — การหลอมรวมสู่ความสมบูรณ์</h3>
+        <p>
+          หลอมรวมสิ่งที่เรียนรู้และสิ่งที่ฝึกให้ “อยู่ได้จริง”<br>
+          เพื่อให้ผู้เรียนรักษาความนิ่ง ความชัด และความมั่นคงภายในได้ด้วยตนเอง
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="kicker">Integration</div>
+        <h3>Closing Integration — การบูรณาการสู่ชีวิตจริง</h3>
+        <p>
+          ปิดวงการเรียนรู้ด้วยโครงสร้างที่ใช้งานซ้ำได้<br>
+          เพื่อให้การฝึกไม่จบที่ห้องเรียน แต่ไปต่อได้ในชีวิตประจำวัน
+        </p>
+      </div>
+    </div>
+
+    <!-- 8 Sessions (titles only, safe) -->
+    <div class="subPanel" style="margin-top:14px;">
+      <h2 style="margin:0 0 10px;">8 Sessions (ชื่อบทเรียน)</h2>
+      <p class="small" style="margin:0 0 12px;">
+        * แสดง “ชื่อและทิศทาง” เพื่อให้เห็นภาพรวมเท่านั้น — รายละเอียดเชิงลึกจะแจ้งในขั้นตอนนัดหมาย
+      </p>
+
+      <div class="resBox">
+        <ol style="margin:0; padding-left:18px; line-height:1.9; color:rgba(255,255,255,.82);">
+          <li><strong>Heart Awakening</strong> — การปลุกหัวใจให้กลับมารู้สึกอีกครั้ง</li>
+          <li><strong>Deep Forgiveness</strong> — การให้อภัยลึกเพื่อคืนอิสรภาพให้หัวใจ</li>
+          <li><strong>Healing the Inner Child</strong> — การโอบกอดและเยียวยาเด็กในใจ</li>
+          <li><strong>Healing the Body &amp; Energy Field</strong> — การเยียวยาร่างกายและสนามพลังที่สะสมบาดแผล</li>
+          <li><strong>Soul Maintenance</strong> — การบำรุงพลังจิต–วิญญาณ และตั้งรากพลังใหม่ในชีวิตประจำวัน</li>
+          <li><strong>Soul Integration</strong> — การรวมพลังจิต–วิญญาณ–ร่างกายให้เป็นหนึ่งเดียว</li>
+          <li><strong>Soul Alignment</strong> — การจัดแนววิญญาณให้ตรงกับเส้นทางแห่งความจริง</li>
+          <li><strong>Soul Completion Ceremony</strong> — พิธีหลอมรวมและประกาศการเกิดใหม่ภายใน</li>
+        </ol>
+      </div>
+    </div>
+
+    <!-- Safety note: what is shared on web -->
+    <div class="subPanel" style="margin-top:14px;">
+      <h2 style="margin:0 0 10px;">สิ่งที่คุณจะได้รับจากโครงสร้างนี้</h2>
+      <div class="grid2">
+        <div class="card">
+          <div class="kicker">Clarity</div>
+          <h3>ชัดว่า “กำลังเดินไปทางไหน”</h3>
+          <p>
+            ผู้เรียนไม่ต้องเดา ไม่ต้องวิ่งหาเทคนิคใหม่เรื่อย ๆ<br>
+            เพราะเส้นทางถูกจัดวางให้เป็นลำดับที่เชื่อมต่อกัน
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">Stability</div>
+          <h3>กลับมาปรับสมดุลได้ด้วยตัวเอง</h3>
+          <p>
+            ระบบนี้เน้นการฝึกซ้ำแบบใช้งานได้จริง<br>
+            โดยใช้สติ ความนิ่ง และลมหายใจเป็นเครื่องมือแกนหลักในการกลับมารับรู้และปรับสมดุล
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">Integration</div>
+          <h3>บูรณาการสู่ชีวิตประจำวัน</h3>
+          <p>
+            เป้าหมายไม่ใช่ “สภาวะพิเศษ” แต่คือการอยู่กับตัวเองได้ดีขึ้นในชีวิตจริง<br>
+            แบบต่อเนื่อง และไม่หลุดศูนย์กลางง่าย
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">Ethics</div>
+          <h3>มีจริยธรรม และเคารพความเป็นส่วนตัว</h3>
+          <p>
+            เว็บไซต์จะแสดงเฉพาะสิ่งที่ “พอดีและปลอดภัย”<br>
+            รายละเอียดเชิงลึกจะสื่อสารแบบเหมาะสมในขั้นตอนนัดหมายเท่านั้น
+          </p>
+        </div>
+      </div>
+
+      <!-- CTA -->
+      <div class="ctaRow" style="margin-top:12px;">
+        <a class="btn primary" href="index.html#contact">นัดหมายเพื่อรับรายละเอียดโปรแกรม</a>
+        <a class="btn" href="services.html">กลับหน้า Services</a>
+      </div>
+    </div>
+
+  </div>
+</section>    
      <a class="card cardLink" href="service-20min.html"
    aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
   <div class="kicker">1) 20-Minute Session</div>
