--- a/services.html
+++ b/services.html
@@ -370,6 +370,66 @@
       </div>
     </div>
 
+<!-- =========================
+  Programs — Step 4 (ปลอดภัย)
+  What happens inside (high-level) • Structure • Ethics
+========================= -->
+<section class="panel" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>Programs — Step 4</h2>
+    <div class="resTag">How it works • Structured • Grounded</div>
+  </div>
+
+  <div class="resBody">
+    <div class="resBox">
+      <p style="margin:0 0 10px 0;">
+        <strong>Programs ของ KRUNIKI SoulSync System™</strong>
+        คือเส้นทางการเรียนรู้และการปฏิบัติที่ออกแบบ “ให้เกิดการเปลี่ยนแปลงจริง”
+        โดยยืนบนสติ ความนิ่ง และการใช้ลมหายใจเป็นเครื่องมือแกนหลักในการกลับมารับรู้และปรับสมดุล
+        แบบเป็นลำดับที่ทำได้จริงในชีวิตประจำวัน
+      </p>
+
+      <ul style="margin:10px 0 0 18px;">
+        <li>
+          <strong>โครงสร้างเป็นลำดับ</strong> — เริ่มจากการทำให้ “กลับมารับรู้ตัวเองได้” ก่อน
+          แล้วค่อยขยายไปสู่การจัดระบบภายในอย่างมั่นคง
+        </li>
+        <li>
+          <strong>เรียนรู้ + ลงมือปฏิบัติ</strong> — ทุกหัวข้อมี “สิ่งที่ทำได้จริง”
+          เพื่อให้ผู้เรียนพากลับไปใช้ในวันธรรมดาได้ทันที
+        </li>
+        <li>
+          <strong>ชัดเจนแต่ไม่ฝืน</strong> — เราไม่เร่ง ไม่กด ไม่ยัด
+          แต่พาให้ค่อย ๆ กลับมาอยู่กับศูนย์กลางภายในอย่างตรงไปตรงมา
+        </li>
+        <li>
+          <strong>จริยธรรมและความปลอดภัย</strong> — Programs วางขอบเขตชัด:
+          เคารพจังหวะผู้เรียน ไม่แทนการรักษาทางการแพทย์ และไม่อ้างผลลัพธ์เกินจริง
+        </li>
+      </ul>
+
+      <div class="grid2" style="margin-top:14px;">
+        <div class="card">
+          <div class="kicker">เหมาะกับใคร</div>
+          <p>
+            ผู้ที่อยากมี “ระบบ” ชัด ๆ สำหรับกลับมารับรู้ตัวเอง
+            ต้องการความนิ่งที่นำไปใช้ได้จริง และอยากฝึกอย่างต่อเนื่องแบบเป็นลำดับ
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">อาจยังไม่เหมาะ (ในตอนนี้)</div>
+          <p>
+            หากกำลังอยู่ในภาวะฉุกเฉินด้านสุขภาพจิต/กาย หรือมีอาการหนักที่ต้องการการดูแลเฉพาะทาง
+            แนะนำให้รับการดูแลจากผู้เชี่ยวชาญก่อน แล้วค่อยกลับมาเริ่มเมื่อพร้อม
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+   
   </div>
 </section>    
      <a class="card cardLink" href="service-20min.html"
