--- a/services.html
+++ b/services.html
@@ -426,6 +426,58 @@
         </div>
       </div>
 
+<!-- =========================
+  Programs — Step 5 (CTA)
+  Bridge to Certification
+========================= -->
+<section class="panel" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>Programs — Step 5</h2>
+    <div class="resTag">Next Step • Certification Program</div>
+  </div>
+
+  <div class="resBody">
+    <div class="resBox">
+      <p style="margin:0 0 12px 0;">
+        หากคุณอ่านมาถึงตรงนี้ และรู้สึกว่า
+        <strong>“อยากมีเส้นทางที่ชัดและลึกกว่านี้”</strong>
+        Programs ของ KRUNIKI SoulSync System™
+        มีเส้นทางหลักที่ออกแบบมาเพื่อการเปลี่ยนแปลงระยะยาวอย่างเป็นระบบ
+      </p>
+
+      <div class="card" style="margin:12px 0;">
+        <div class="kicker">Main Path</div>
+        <h3>KRUNIKI Healing System™ — Certification Program</h3>
+        <p>
+          โปรแกรมการเรียนรู้และการปฏิบัติแบบเป็นลำดับ (8–12 เดือน)
+          สำหรับผู้ที่ต้องการเข้าใจตัวเองอย่างลึกซึ้ง
+          จัดระบบภายในให้มั่นคง และพัฒนาความสามารถในการดูแลตนเอง
+          (และผู้อื่น หากเลือกเส้นทางนั้น) อย่างมีจริยธรรม
+        </p>
+      </div>
+
+      <div class="ctaRow" style="margin-top:14px;">
+        <a class="btn primary"
+           href="certification.html"
+           aria-label="ดูรายละเอียด KRUNIKI Healing System™ Certification Program">
+          ดูรายละเอียด Certification Program
+        </a>
+
+        <a class="btn"
+           href="index.html#contact"
+           aria-label="ติดต่อสอบถามก่อนตัดสินใจ">
+          ติดต่อเพื่อสอบถามก่อนตัดสินใจ
+        </a>
+      </div>
+
+      <p class="small" style="margin-top:12px; opacity:.7;">
+        * คุณไม่จำเป็นต้องพร้อมทุกอย่างในวันนี้  
+        แค่รับรู้ว่า “นี่คือเส้นทางที่มีอยู่” ก็เพียงพอแล้ว
+      </p>
+    </div>
+  </div>
+</section>
+      
     </div>
   </div>
 </section>
