--- a/services.html
+++ b/services.html
@@ -513,15 +513,17 @@
 </a>
  </div>
 </section>
-<div class="card">
-        <div class="kicker">4) Tools & Practices</div>
-        <h3>เครื่องมือดูแลหัวใจ (Affirmations / Meditation / Ritual)</h3>
-        <p>
-          สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง เพื่อความนิ่งและความมั่นคงภายใน
-        </p>
-      </div>
-    </div>
 
+  <a class="card cardLink" href="service-tools.html"
+   aria-label="เปิดรายละเอียดบริการ: Tools & Practices — เครื่องมือดูแลหัวใจ">
+  <div class="kicker">4) Tools & Practices</div>
+  <h3>Tools & Practices — เครื่องมือดูแลหัวใจ</h3>
+  <p>
+    สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง
+    เพื่อความนิ่งและความมั่นคงภายใน ภายใต้ KRUNIKI SoulSync System™
+  </p>
+</a>
+  
     <div class="subPanel">
       <h2>สิ่งที่เราจะเพิ่มต่อจากนี้</h2>
       <p class="small">
