--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <nav aria-label="เมนูหลัก">
      <a href="about.html">About</a>
      <a href="services.html">บริการ</a>
-     <a href="#resources">Resources</a>
+     <a href="resources.html">Resources</a>
      <a href="#contact">ติดต่อ</a>
     </nav>
 
