--- a/resources.html
+++ b/resources.html
@@ -107,12 +107,12 @@
     Step 2 — QUICK START (Cards)
   ========================= -->
   <section class="panel" style="margin-top:16px;">
-    <div class="resHead">
-      <h2>Quick Start — เริ่มตรงนี้</h2>
-      <div class="resTag">Tools • Audio • Notes</div>
-    </div>
+<div class="resHead">
+  <h2>Quick Start — เริ่มตรงนี้</h2>
+  <div class="resTag">Breath & Stillness Guides • Tools • Audio • Notes</div>
+</div>
 
-    <div class="resBody">
+      <div class="resBody">
       <div class="grid2">
 
         <div class="card">
