--- a/resources.html
+++ b/resources.html
@@ -80,9 +80,10 @@
         <div class="goldline">Resources • แหล่งรวมเครื่องมือของ <strong>KRUNIKI</strong></div>
         <h1>เริ่มจากสิ่งเล็ก ๆ ที่ใช้งานได้จริง</h1>
         <p class="lead">
-          หน้านี้รวบรวม “เครื่องมือสั้น ๆ” และ “ทรัพยากรพื้นฐาน” สำหรับการเรียนรู้และการปฏิบัติ
-          ให้คุณกลับมารับรู้ตัวเองอย่างเป็นลำดับ โดยไม่ต้องเริ่มจากอะไรที่หนักเกินไป
-        </p>
+  หน้านี้รวบรวม “เครื่องมือสั้น ๆ” และ “ทรัพยากรพื้นฐาน” สำหรับการเรียนรู้และการปฏิบัติ
+  ภายใต้ <strong>KRUNIKI SoulSync System™</strong> — เพื่อให้คุณกลับมารับรู้ตัวเองอย่างเป็นลำดับ
+  โดยไม่ต้องเริ่มจากอะไรที่หนักเกินไป
+</p>
 
         <div class="ctaRow">
           <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ขอคำแนะนำ (LINE)</a>
