--- a/resources.html
+++ b/resources.html
@@ -165,6 +165,80 @@
     </div>
   </section>
 
+ <!-- =========================
+    Step 2 — BREATH & STILLNESS GUIDES (Library)
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Breath & Stillness Guides — ห้องเครื่องมือ (พื้นฐาน)</h2>
+      <div class="resTag">Library • Step-by-step • Repeatable</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <strong>ใช้ยังไง:</strong> เลือก “หมวดเดียว” ที่ตรงกับตอนนี้ → ทำให้จบ → ทำซ้ำ 3–7 วัน แล้วค่อยเพิ่มหมวดถัดไป
+      </div>
+
+      <div class="grid2" style="margin-top:14px;">
+
+        <!-- A) Breath Reset -->
+        <div class="card">
+          <div class="kicker">A) Breath Reset</div>
+          <h3>ลมหายใจรีเซ็ต (สั้น • ปลอดภัย • ใช้ได้ทุกวัน)</h3>
+          <p>ชุดหายใจแบบเบา ๆ เพื่อคืนศูนย์กลาง ลดแรงสั่นของใจ และทำให้ “กลับมาอยู่กับตัวเอง” ได้เร็วขึ้น</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Breath Reset">เปิดอ่าน</a>
+            <a class="btn" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ขอไฟล์</a>
+          </div>
+        </div>
+
+        <!-- B) Stillness Practice -->
+        <div class="card">
+          <div class="kicker">B) Stillness Practice</div>
+          <h3>ฝึกความนิ่ง (5–10 นาที)</h3>
+          <p>แนวฝึกความนิ่งแบบทำซ้ำได้ เพื่อให้ใจ “ไม่ต้องฝืน” และร่างกายค่อย ๆ ปรับกลับสู่ baseline</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Stillness Practice">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="ฟัง: Stillness Practice Audio">ฟัง</a>
+          </div>
+        </div>
+
+        <!-- C) Grounding & Nervous System -->
+        <div class="card">
+          <div class="kicker">C) Grounding</div>
+          <h3>Grounding & Nervous System (ตั้งหลักให้ระบบประสาท)</h3>
+          <p>เครื่องมือสั้น ๆ สำหรับ “เอาคืนตัวเองกลับมา” เมื่อโลกข้างนอกหนักเกินไป และใจเริ่มลอย</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Grounding Guide">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="ดู: Grounding Checklist">ดูเช็กลิสต์</a>
+          </div>
+        </div>
+
+        <!-- D) Emotional Soften -->
+        <div class="card">
+          <div class="kicker">D) Emotional Soften</div>
+          <h3>ผ่อนอารมณ์อย่างอ่อนโยน (ไม่กด ไม่เร่ง)</h3>
+          <p>แนวทางอยู่กับความรู้สึกแบบปลอดภัย: รับรู้ → ตั้งชื่อ → วางมือบนหัวใจ → กลับมาหายใจ</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Emotional Soften">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="บันทึก: 5 นาที">ทำแบบฝึก 5 นาที</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="resBox" style="margin-top:14px;">
+        <strong>หมายเหตุ:</strong> ตอนนี้ลิงก์ยังเป็น <code>#</code> เพื่อรอใส่ลิงก์จริง (ไฟล์ / หน้าบทอ่าน / YouTube unlisted)  
+        ถ้านิกี้พร้อมเมื่อไหร่ บอกฉันชื่อไฟล์/ลิงก์ ฉันจะช่วย “ผูกลิงก์ให้ครบทั้งหน้า” แบบไม่หลุดสไตล์
+      </div>
+
+      <div class="ctaRow" style="margin-top:12px;">
+        <a class="btn" href="#top" aria-label="กลับขึ้นด้านบน">กลับขึ้นด้านบน</a>
+        <a class="btn" href="services.html">ไปหน้าบริการ</a>
+      </div>
+    </div>
+  </section>
+  
   <!-- =========================
     Step 3 — CTA Panel
   ========================= -->
