--- a/resources.html
+++ b/resources.html
@@ -238,6 +238,81 @@
       </div>
     </div>
   </section>
+
+  <!-- =========================
+    Step 3 — SELF-HEALING NOTES (Notes Library)
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Self-Healing Notes — โน้ตเยียวยา (อ่านสั้น • ใช้จริง)</h2>
+      <div class="resTag">Notes • Integration • Everyday use</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <strong>แนวคิด:</strong> อ่านให้ “พอเข้าใจ” แล้วนำไปใช้ทันที 1 อย่าง  
+        ไม่ต้องอ่านเยอะ ไม่ต้องเปลี่ยนตัวเองทั้งก้อน
+      </div>
+
+      <div class="grid2" style="margin-top:14px;">
+
+        <!-- 1) Heart Awareness -->
+        <div class="card">
+          <div class="kicker">1) Heart Awareness</div>
+          <h3>ฟังหัวใจอย่างไม่ตัดสิน</h3>
+          <p>โน้ตสั้น ๆ สำหรับการรับรู้ความรู้สึกโดยไม่ผลัก ไม่กด และไม่ต้องหาคำตอบทันที</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Heart Awareness">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="บันทึก 3 นาที">บันทึก 3 นาที</a>
+          </div>
+        </div>
+
+        <!-- 2) Emotional Naming -->
+        <div class="card">
+          <div class="kicker">2) Emotional Naming</div>
+          <h3>ตั้งชื่ออารมณ์ เพื่อให้ใจเบาลง</h3>
+          <p>วิธีตั้งชื่อความรู้สึกอย่างอ่อนโยน เพื่อให้ระบบภายในหยุดวนและเริ่มคลายตัว</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Emotional Naming">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="ดูตัวอย่าง">ดูตัวอย่าง</a>
+          </div>
+        </div>
+
+        <!-- 3) Daily Integration -->
+        <div class="card">
+          <div class="kicker">3) Daily Integration</div>
+          <h3>เอาสิ่งที่เรียนรู้ ไปใช้ในชีวิตจริง</h3>
+          <p>โน้ตเชื่อมการฝึกกับชีวิตประจำวัน เช่น การทำงาน ความสัมพันธ์ และการพักผ่อน</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Daily Integration">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="เช็กลิสต์รายวัน">เช็กลิสต์</a>
+          </div>
+        </div>
+
+        <!-- 4) When to Pause -->
+        <div class="card">
+          <div class="kicker">4) When to Pause</div>
+          <h3>รู้จังหวะ “พอแล้ว” ของการเยียวยา</h3>
+          <p>สัญญาณที่บอกว่าควรพัก หยุด หรือเปลี่ยนเครื่องมือ เพื่อไม่ให้ใจล้าเกินไป</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: When to Pause">เปิดอ่าน</a>
+            <a class="btn" href="services.html">ดูบริการดูแลต่อเนื่อง</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="resBox" style="margin-top:14px;">
+        <strong>คำแนะนำ:</strong> ถ้าอ่านแล้วรู้สึก “ตรงใจ” มาก ให้หยุดอ่านทันที  
+        วางมือบนหัวใจ หายใจ 3 รอบ แล้วค่อยกลับมาอ่านต่อในวันถัดไป
+      </div>
+
+      <div class="ctaRow" style="margin-top:12px;">
+        <a class="btn" href="#top">กลับขึ้นด้านบน</a>
+        <a class="btn" href="services.html">ไปหน้าบริการ</a>
+      </div>
+    </div>
+  </section>
   
   <!-- =========================
     Step 3 — CTA Panel
