--- a/resources.html
+++ b/resources.html
@@ -313,6 +313,81 @@
       </div>
     </div>
   </section>
+
+ <!-- =========================
+    Step 4 — FOUNDATIONS (Educational Pages)
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Foundations — พื้นฐานที่ควรรู้ (อ่านง่าย • ใช้ได้จริง)</h2>
+      <div class="resTag">Basics • Nervous system • Practice first</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <strong>แนวทาง:</strong> อ่านเพื่อ “เข้าใจพอประมาณ” แล้วกลับไปทำเครื่องมือสั้น ๆ  
+        (KRUNIKI เน้น Practice ก่อน Theory)
+      </div>
+
+      <div class="grid2" style="margin-top:14px;">
+
+        <!-- 1) Nervous System 101 -->
+        <div class="card">
+          <div class="kicker">1) Nervous System 101</div>
+          <h3>ระบบประสาทกับความเครียด (แบบเข้าใจง่าย)</h3>
+          <p>ทำไมบางวันใจสั่น ล้า หยุดคิดไม่ได้ — และเราพากลับสู่ baseline ได้อย่างไร</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Nervous System 101">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="สรุป 1 นาที">สรุป 1 นาที</a>
+          </div>
+        </div>
+
+        <!-- 2) Breath Basics -->
+        <div class="card">
+          <div class="kicker">2) Breath Basics</div>
+          <h3>ลมหายใจเป็นเครื่องมือ (ไม่ต้องเก่งก็เริ่มได้)</h3>
+          <p>หลักการง่าย ๆ ของการใช้ลมหายใจเพื่อปรับสมดุล—โดยไม่ฝืนและไม่ทำให้เวียนหัว</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Breath Basics">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="ข้อควรระวัง">ข้อควรระวัง</a>
+          </div>
+        </div>
+
+        <!-- 3) Emotional Regulation -->
+        <div class="card">
+          <div class="kicker">3) Emotional Regulation</div>
+          <h3>อยู่กับอารมณ์โดยไม่จม</h3>
+          <p>แนวทาง “ยอมรับ–ตั้งชื่อ–วางมือ–หายใจ” เพื่อให้อารมณ์ไหลผ่านอย่างปลอดภัย</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Emotional Regulation">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="ตัวอย่างประโยค">ตัวอย่างประโยค</a>
+          </div>
+        </div>
+
+        <!-- 4) Practice Rhythm -->
+        <div class="card">
+          <div class="kicker">4) Practice Rhythm</div>
+          <h3>การฝึกให้ “ทำซ้ำได้” โดยไม่ล้า</h3>
+          <p>วิธีจัดจังหวะการฝึก 5–10 นาที/วัน ให้ต่อเนื่องแบบไม่กดดันและเห็นผลจริง</p>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เปิดอ่าน: Practice Rhythm">เปิดอ่าน</a>
+            <a class="btn" href="#" aria-label="แผน 7 วัน">แผน 7 วัน</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="resBox" style="margin-top:14px;">
+        <strong>หมายเหตุ:</strong> ปุ่มทั้งหมดตั้งเป็น <code>#</code> ไว้ก่อน (ถูกต้องแล้ว)  
+        เดี๋ยวค่อยเชื่อมเป็นลิงก์จริง (หน้าอ่านในเว็บ / Google Drive / YouTube unlisted) ทีหลังได้
+      </div>
+
+      <div class="ctaRow" style="margin-top:12px;">
+        <a class="btn" href="#top">กลับขึ้นด้านบน</a>
+        <a class="btn" href="services.html">ไปหน้าบริการ</a>
+      </div>
+    </div>
+  </section>
   
   <!-- =========================
     Step 3 — CTA Panel
