--- a/resources.html
+++ b/resources.html
@@ -388,6 +388,96 @@
       </div>
     </div>
   </section>
+
+ <!-- =========================
+    Step 5 — RECOMMENDED PATHS (Choose your starting point)
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Recommended Paths — เลือกเส้นทางเริ่มต้นตาม “สถานะใจ”</h2>
+      <div class="resTag">Pick 1 • Do it fully • Repeatable</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <strong>วิธีใช้:</strong> เลือก 1 เส้นทาง → ทำให้จบ → ทำซ้ำ 3 วัน  
+        แล้วค่อยเพิ่มเครื่องมือชิ้นถัดไป (ไม่ต้องทำทุกอย่างพร้อมกัน)
+      </div>
+
+      <div class="grid2" style="margin-top:14px;">
+
+        <!-- Path A -->
+        <div class="card">
+          <div class="kicker">Path A • When you feel overwhelmed</div>
+          <h3>ใจล้น / สมองวิ่ง / รับไม่ไหว</h3>
+          <p>โฟกัส: กลับสู่ baseline ให้เร็วที่สุด แล้วค่อยคิดเรื่องอื่น</p>
+          <ul class="list" style="margin-top:8px;">
+            <li>60-Second Reset</li>
+            <li>Stillness Audio (7–10 นาที)</li>
+            <li>Journal Prompt (บันทึก 5 นาที)</li>
+          </ul>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เริ่ม Path A: เปิดอ่าน 60-Second Reset">เริ่ม Path A</a>
+            <a class="btn" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ขอแนะนำส่วนตัว</a>
+          </div>
+        </div>
+
+        <!-- Path B -->
+        <div class="card">
+          <div class="kicker">Path B • When you feel numb</div>
+          <h3>ใจชา / ไม่รู้สึก / เหมือนห่างจากตัวเอง</h3>
+          <p>โฟกัส: กลับมารับรู้ร่างกายและความรู้สึกแบบอ่อนโยน ไม่บังคับ</p>
+          <ul class="list" style="margin-top:8px;">
+            <li>Stillness Audio (7–10 นาที)</li>
+            <li>Emotional Regulation (อ่านสั้น ๆ)</li>
+            <li>Journal Prompt (บันทึก 5 นาที)</li>
+          </ul>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เริ่ม Path B: ฟัง Stillness Audio">เริ่ม Path B</a>
+            <a class="btn" href="services.html">ดูบริการที่เหมาะ</a>
+          </div>
+        </div>
+
+        <!-- Path C -->
+        <div class="card">
+          <div class="kicker">Path C • When you want clarity</div>
+          <h3>อยากชัดเจน / อยากจัดระบบชีวิต–ใจ</h3>
+          <p>โฟกัส: เข้าใจพื้นฐาน + วางจังหวะการฝึกให้ทำซ้ำได้จริง</p>
+          <ul class="list" style="margin-top:8px;">
+            <li>Nervous System 101</li>
+            <li>Practice Rhythm (แผน 7 วัน)</li>
+            <li>Practice Notes</li>
+          </ul>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="เริ่ม Path C: เปิดอ่าน Nervous System 101">เริ่ม Path C</a>
+            <a class="btn" href="services.html">ไปหน้าบริการ</a>
+          </div>
+        </div>
+
+        <!-- Path D -->
+        <div class="card">
+          <div class="kicker">Path D • When you’re ready to go deeper</div>
+          <h3>พร้อม “ลงลึก” แบบมีผู้ดูแล</h3>
+          <p>โฟกัส: ให้มีคนช่วยประเมินและจัดเครื่องมือให้พอดี เพื่อไม่หลงและไม่ล้า</p>
+          <ul class="list" style="margin-top:8px;">
+            <li>คุยสั้น ๆ เพื่อประเมินความเหมาะสม</li>
+            <li>จัด “ชุดเริ่มต้น” เฉพาะคุณ</li>
+            <li>แนะนำบริการที่ตรงจังหวะ (20 นาที / Private / Programs)</li>
+          </ul>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ทัก LINE เพื่อจัดชุดเริ่มต้น</a>
+            <a class="btn" href="services.html">ดูบริการทั้งหมด</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="resBox" style="margin-top:14px;">
+        <strong>หมายเหตุ:</strong> ปุ่ม “เริ่ม Path …” ตั้งเป็น <code>#</code> ไว้ก่อน เพื่อให้หน้าใช้งานได้ทันที  
+        เดี๋ยวค่อยเชื่อมลิงก์จริงทีหลัง (หน้าอ่านในเว็บ / ไฟล์ / วิดีโอ)
+      </div>
+    </div>
+  </section>
   
   <!-- =========================
     Step 3 — CTA Panel
