--- a/resources.html
+++ b/resources.html
@@ -478,6 +478,71 @@
       </div>
     </div>
   </section>
+
+  <!-- =========================
+    Step 6 — SAFE USE + DISCLAIMER
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>Safe Use — ใช้อย่างปลอดภัย และไม่กดดันตัวเอง</h2>
+      <div class="resTag">Gentle • Grounded • Clear</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <strong>หลักการใช้งานที่ดีที่สุด:</strong>
+        <ul class="list" style="margin-top:8px;">
+          <li><strong>เลือก 1 อย่าง</strong> แล้วทำให้จบก่อน (ไม่ต้องทำทุกอย่างพร้อมกัน)</li>
+          <li><strong>ทำซ้ำได้</strong> สำคัญกว่า “ทำเยอะ” (repeatable > overload)</li>
+          <li>ถ้ารู้สึกใจสั่น หน้ามืด หายใจไม่ทัน ให้ <strong>หยุดพัก</strong> และกลับไปทำ “60-Second Reset”</li>
+        </ul>
+      </div>
+
+      <div class="grid2" style="margin-top:14px;">
+
+        <div class="card">
+          <div class="kicker">When to pause</div>
+          <h3>สัญญาณว่า “ควรพัก”</h3>
+          <p>ถ้ามีอาการเหล่านี้ ให้ลดความเข้มลงทันที</p>
+          <ul class="list" style="margin-top:8px;">
+            <li>แน่นหน้าอก / หายใจตื้น / เวียนหัว</li>
+            <li>น้ำตาไหลหนักมากจนควบคุมไม่ได้</li>
+            <li>รู้สึกหลุดลอย หรือยิ่งทำยิ่งตึง</li>
+          </ul>
+          <div class="ctaRow" style="margin-top:10px;">
+            <a class="btn" href="#" aria-label="กลับไปทำ 60-Second Reset">กลับไปทำ Reset</a>
+            <a class="btn" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ทักเพื่อขอคำแนะนำ</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="kicker">Not medical advice</div>
+          <h3>ขอบเขต (เพื่อความชัดเจน)</h3>
+          <p>
+            Resources หน้านี้คือ “เครื่องมือการเรียนรู้และการปฏิบัติ” ภายใต้แนวทาง
+            <strong>KRUNIKI SoulSync System™</strong> เพื่อการดูแลตัวเองอย่างอ่อนโยน
+            <br><br>
+            <strong>ไม่ใช่คำแนะนำทางการแพทย์</strong> และไม่แทนการรักษาจากผู้เชี่ยวชาญ
+          </p>
+          <p class="small" style="margin-top:10px;">
+            หากคุณมีอาการรุนแรงต่อเนื่อง (เช่น หายใจติดขัดรุนแรง, panic บ่อย, นอนไม่หลับหนัก, ภาวะซึมเศร้ารุนแรง)
+            แนะนำให้ปรึกษาผู้เชี่ยวชาญด้านสุขภาพก่อน และสามารถใช้เครื่องมือหน้านี้เป็น “ตัวช่วยเสริม” ได้
+          </p>
+        </div>
+
+      </div>
+
+      <div class="resBox" style="margin-top:14px;">
+        <strong>ถ้าคุณไม่แน่ใจว่าจะเริ่มจากอะไร:</strong>
+        บอกฉัน 2 อย่างใน LINE: <strong>(1) ตอนนี้ใจหนักเรื่องอะไร</strong> และ <strong>(2) เวลาที่มีต่อวัน</strong>
+        แล้วฉันจะช่วยเลือก “1–2 เครื่องมือ” ที่พอดีที่สุดให้คุณ
+        <div class="ctaRow" style="margin-top:12px;">
+          <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ทัก LINE เพื่อให้ช่วยเลือก</a>
+          <a class="btn" href="services.html">ดูบริการที่เกี่ยวข้อง</a>
+        </div>
+      </div>
+    </div>
+  </section>
   
   <!-- =========================
     Step 3 — CTA Panel
